# influx-query

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.codex-plugin/: plugin.json
.github/workflows/: release.yml
skills/influx-query/: SKILL.md
skills/influxdb-query/: SKILL.md
skills/influxdb-query/scripts/: install_influx_query.sh
src/: lib.rs  main.rs
tests/: install-script-test.sh
