[package]
name = "influx-query"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
csv = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "charset", "http2", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
